# mcq-terminal-app

./: README.md  setup.cfg
example/: mcq-example.md
mcqterm/: __main__.py  custom-glow-theme.json  mcq.py  mcq2.py  mcqcommon.py  ptutils.py  server.py  ssh.py
