[metadata]
name = mcqterm
version = attr: mcqterm.__version__
author = Vincent Michel
author-email = vxgmichel@gmail.com
summary = An MCQ terminal application served over SSH
description-file = README.md
requires-dist = setuptools
license = GPLv3
keywords = mcq, terminal, ssh
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    asyncssh
    structlog
    pathvalidate
    prompt_toolkit >= 3
python_requires = >= 3.8

[options.packages.find]
where = mcqterm

[options.entry_points]
console_scripts = mcqterm=mcqterm.server:main